--- a/SIMS.WebApp/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/SIMS.WebApp/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Đặt lại mật khẩu";
+    ViewData["Title"] = "Reset password";
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <div class="text-center">
     <h1 class="h4 text-gray-900 mb-4">@ViewData["Title"]</h1>
-    <p>Hãy nhập thông tin dưới đây để đặt lại mật khẩu của bạn.</p>
+    <p>Please enter your details below to reset your password.</p>
 </div>
 
 <form method="post">
@@ -18,14 +18,14 @@
         <span asp-validation-for="Input.Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="Input.Password" class="form-control form-control-user" autocomplete="new-password" aria-required="true" placeholder="Mật khẩu mới" />
+        <input asp-for="Input.Password" class="form-control form-control-user" autocomplete="new-password" aria-required="true" placeholder="New Password" />
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="Input.ConfirmPassword" class="form-control form-control-user" autocomplete="new-password" aria-required="true" placeholder="Xác nhận mật khẩu mới" />
+        <input asp-for="Input.ConfirmPassword" class="form-control form-control-user" autocomplete="new-password" aria-required="true" placeholder="Confirm New Password" />
         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-login btn-user btn-block">Đặt lại mật khẩu</button>
+    <button type="submit" class="btn btn-login btn-user btn-block">Reset Password</button>
 </form>
 
 @section Scripts {
