--- a/SIMS.WebApp/Views/Students/Index.cshtml
+++ b/SIMS.WebApp/Views/Students/Index.cshtml
@@ -6,27 +6,42 @@
     <a asp-action="Create" class="btn btn-primary">Create New Student</a>
 </p>
 
-<table class="table">
-    <thead>
+<table class="table table-hover">
+    <thead class="thead-light">
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th></th> @* Thêm một cột trống cho các nút bấm *@
+            <th>
+                @Html.DisplayNameFor(model => model.First().StudentCode)
+            </th>
+            <th>
+                Full Name
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Email)
+            </th>
+            <th></th> <!-- Column for action buttons -->
         </tr>
     </thead>
     <tbody>
         @foreach (var student in Model)
         {
             <tr>
-                <td>@student.FirstName</td>
-                <td>@student.LastName</td>
-                <td>@student.Email</td>
                 <td>
-                    @* Thêm các link hành động *@
+                    @Html.DisplayFor(modelItem => student.StudentCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => student.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => student.Email)
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@student.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@student.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@student.Id">Delete</a>
+                    <form asp-action="Delete" method="post" class="d-inline delete-form-trigger"
+                          data-message="Are you sure you want to delete the student '@student.FullName'?">
+                        <input type="hidden" name="id" value="@student.Id" />
+                        <button type="submit" class="button-as-link">Delete</button>
+                    </form>
                 </td>
             </tr>
         }
