--- a/SIMS.WebApp/Views/Classroom/Index.cshtml
+++ b/SIMS.WebApp/Views/Classroom/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿@model IEnumerable<SIMS.Domain.Classroom>
 
 @{
-    ViewData["Title"] = "Danh sách Lớp học";
+    ViewData["Title"] = "Classroom List";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Tạo Lớp học mới</a>
+    <a asp-action="Create" class="btn btn-primary">Create New Classroom</a>
 </p>
 
 <table class="table table-hover">
     <thead class="thead-light">
         <tr>
-            <th>Tên Lớp học</th>
-            <th>Học kỳ</th>
-            <th>Tên Khóa học</th>
-            <th>Giảng viên</th>
+            <th>Class Name</th>
+            <th>Semester</th>
+            <th>Course Name</th>
+            <th>Faculty</th>
             <th></th>
         </tr>
     </thead>
@@ -29,12 +29,11 @@
                 <td>@Html.DisplayFor(modelItem => item.Course.CourseName)</td>
                 <td>@Html.DisplayFor(modelItem => item.Faculty.FullName)</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Chi tiết</a> |
-
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <form asp-action="Delete" method="post" class="d-inline delete-form-trigger"
-                          data-message="Bạn có chắc chắn muốn xóa toàn bộ lớp học này không? Mọi dữ liệu đăng ký của sinh viên trong lớp cũng sẽ bị xóa.">
+                          data-message="Are you sure you want to delete this entire class? All student enrollment data for this class will also be deleted.">
                         <input type="hidden" name="id" value="@item.Id" />
-                        <button type="submit" class="btn btn-danger btn-sm">Xóa</button>
+                        <button type="submit" class="button-as-link">Delete</button>
                     </form>
                 </td>
             </tr>
